--- a/ApiCodingChallenge/src/main/resources/application.properties
+++ b/ApiCodingChallenge/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Books
-server.port=2525
+server.port=9023
 spring.datasource.url=jdbc:mysql://localhost:3306/Books
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Sushmitha@10
